# pastebin

./: Cargo.toml
src/: api_generated.rs  main.rs  plugins.rs
static/: custom.js
