[package]
name = "pastebin"
version = "0.1.3"
authors = ["Kaczanowski Mateusz <kaczanowski.mateusz@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.4.10", features = ["tls"] }
regex = "1.5.4"
humantime = "2.1.0"
rocksdb = "0.16.0"
nanoid = "0.4.0"
flatbuffers = "2.0.0"
structopt = "0.3.21"
structopt-derive = "0.4.14"
num_cpus = "1.13.0"
handlebars = "4.0.0-beta.2"
tempdir = "0.3.7"
speculate = "0.1.2"
chrono = "0.4.19"
serde_json = "1.0.64"
